--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^1.0.3
   image_picker: ^1.0.7
+  lottie: ^3.0.0
   video_player: ^2.8.2
 
 dev_dependencies:
@@ -52,6 +53,7 @@ flutter:
   assets:
     - assets/images/
     - assets/video/
+    - assets/lottie/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
