--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   image_picker: ^1.0.7
   lottie: ^3.0.0
+  provider: ^6.1.1
   video_player: ^2.8.2
 
 dev_dependencies:
