--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.3
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
   flutter_colorpicker: ^1.0.3
   image_picker: ^1.0.7
   lottie: ^3.0.0
