--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.0.7
   lottie: ^3.0.0
   provider: ^6.1.1
+  shared_preferences: ^2.2.2
   video_player: ^2.8.2
 
 dev_dependencies:
