--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   lottie: ^3.0.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  sqflite: ^2.3.2
   video_player: ^2.8.2
 
 dev_dependencies:
@@ -75,6 +76,7 @@ flutter:
     - family: Quicksand
       fonts:
         - asset: assets/fonts/Quicksand-Regular.ttf
+          weight: 400
         - asset: assets/fonts/Quicksand-Bold.ttf
           weight: 700
   # fonts:
@@ -91,3 +93,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
