--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_colorpicker: ^1.0.3
+  flutter_dotenv: ^5.1.0
   image_picker: ^1.0.7
   lottie: ^3.0.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
+  supabase_flutter: ^2.3.4
   video_player: ^2.8.2
 
 dev_dependencies:
@@ -61,6 +63,7 @@ flutter:
     - assets/images/
     - assets/video/
     - assets/lottie/
+    - .env
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
