--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^8.1.3
   crypto: ^3.0.3
   cupertino_icons: ^1.0.2
+  dio: ^5.3.2
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -40,6 +41,7 @@ dependencies:
   image_picker: ^1.0.7
   lottie: ^3.0.0
   provider: ^6.1.1
+  requests_inspector: ^3.3.2
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
   supabase_flutter: ^2.3.4
